무조건 검색 2회 반복 버그 수정